SigmaCodebackup3rdSep/objects/Recipe__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recipes</relationshipLabel>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipe_Type__c</fullName>
        <label>Recipe Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Raw Material</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <label>Recipe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>